Modele - Table Species

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -6,6 +6,7 @@
             "home": "Home",
             "entities": {
                 "main": "Entities",
+                "species": "Species",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
