--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -7,6 +7,7 @@
             "entities": {
                 "main": "Entités",
                 "species": "Species",
+                "tag": "Tag",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
