--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,6 +8,7 @@
                 "main": "Entities",
                 "species": "Species",
                 "tag": "Tag",
+                "picture": "Picture",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
