--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -9,6 +9,7 @@
                 "species": "Species",
                 "tag": "Tag",
                 "picture": "Picture",
+                "level": "Level",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
