Creation Modele - Table "Levels"

--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -6,6 +6,7 @@
             "home": "Accueil",
             "entities": {
                 "main": "Entités",
+                "levels": "Levels",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
