--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -7,6 +7,7 @@
             "entities": {
                 "main": "Entités",
                 "levels": "Levels",
+                "pictures": "Pictures",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
