Creation Modele - Table "Tags"

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,6 +8,7 @@
                 "main": "Entities",
                 "levels": "Levels",
                 "pictures": "Pictures",
+                "tags": "Tags",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
