Creation Modele - Table "Species"

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -9,6 +9,7 @@
                 "levels": "Levels",
                 "pictures": "Pictures",
                 "tags": "Tags",
+                "species": "Species",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
