--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -10,6 +10,8 @@
                 "pictures": "Pictures",
                 "tags": "Tags",
                 "species": "Species",
+                "userStars": "UserStars",
+                "userSpecies": "UserSpecies",
                 "additionalEntity": "JHipster will add addtional entities"
             },
             "account": {
